<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_activity_view_animations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_activity_view_animations"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_activity_property_animations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_activity_property_animations"
        android:backgroundTint="#0dd3ff"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_activity_view_animations" />


    <Button
        android:id="@+id/btn_activity_drawable_animations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_activity_drawable_animations"
        android:backgroundTint="#fff000"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_activity_property_animations" />

    <Button
        android:id="@+id/btn_activity_layout_change_animations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_activity_layout_change_animations"
        android:backgroundTint="#05cc47"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_activity_drawable_animations" />

    <Button
        android:id="@+id/btn_activity_transition_api_animations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_activity_transition_api_animations"
        android:backgroundTint="#e50914"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_activity_layout_change_animations" />

    <Button
        android:id="@+id/btn_activity_circular_reveal_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_activity_circular_reveal_animation"
        android:backgroundTint="#f784b6"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_activity_transition_api_animations" />


</androidx.constraintlayout.widget.ConstraintLayout>